tests/machine/x/kotlin/match_expr.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/match_expr.kt:9:5: error: 'when' expression must be exhaustive, add necessary 'else' branch
    when (__t) {
    ^
/workspace/mochi/tests/machine/x/kotlin/match_expr.kt:13:9: error: unresolved reference: _
        _ -> "unknown"
        ^
