tests/machine/x/kotlin/match_expr.kt
// Generated by Mochi compiler v0.10.26 on 2025-07-16T17:37:34Z
fun String.starts_with(prefix: String): Boolean = this.startsWith(prefix)
// Code generated from match_expr.mochi

val x = 2

val label = run {
    val __t = x
    when (__t) {
        1 -> "one"
        2 -> "two"
        3 -> "three"
        _ -> "unknown"
    }
}

fun main() {
    println(label)
}
